<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="160dp"
        android:layout_height="32dp"
        android:layout_marginTop="56dp"
        android:text="@string/title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/costInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/costTitle"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/dollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollarSign"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/costInput"
        app:layout_constraintEnd_toStartOf="@+id/costInput"
        app:layout_constraintTop_toTopOf="@+id/costInput" />

    <Spinner
        android:id="@+id/tipSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="@+id/costInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/costInput"
        app:layout_constraintTop_toBottomOf="@+id/costInput" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tipSpinner"
        app:layout_constraintEnd_toEndOf="@+id/tipSpinner"
        app:layout_constraintStart_toStartOf="@+id/tipSpinner" />

    <TextView
        android:id="@+id/percentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:text="@string/percentSign"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tipSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tipSpinner"
        app:layout_constraintTop_toTopOf="@+id/tipSpinner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/finalCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/percentTitle"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/tipSpinner"
        app:layout_constraintTop_toBottomOf="@+id/tipSpinner"
        app:layout_constraintVertical_bias="0.179" />

</androidx.constraintlayout.widget.ConstraintLayout>